#413: Load plugins from JAR files (#416)
Co-authored-by: Sebastian Bär <redcatbear@ursus-minor.de>