@@ -1,27 +1,32 @@
 package org.itsallcode.openfasttrace.core.serviceloader;
 
-import static java.util.stream.Collectors.toList;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.*;
 
 import java.util.List;
-import java.util.stream.StreamSupport;
 
 import org.itsallcode.openfasttrace.api.core.serviceloader.Initializable;
 import org.itsallcode.openfasttrace.api.exporter.ExporterContext;
 import org.itsallcode.openfasttrace.api.exporter.ExporterFactory;
 import org.itsallcode.openfasttrace.api.importer.ImporterContext;
 import org.itsallcode.openfasttrace.api.importer.ImporterFactory;
+import org.itsallcode.openfasttrace.api.report.ReporterContext;
+import org.itsallcode.openfasttrace.api.report.ReporterFactory;
 import org.itsallcode.openfasttrace.exporter.specobject.SpecobjectExporterFactory;
 import org.itsallcode.openfasttrace.importer.markdown.MarkdownImporterFactory;
 import org.itsallcode.openfasttrace.importer.restructuredtext.RestructuredTextImporterFactory;
 import org.itsallcode.openfasttrace.importer.specobject.SpecobjectImporterFactory;
 import org.itsallcode.openfasttrace.importer.tag.TagImporterFactory;
 import org.itsallcode.openfasttrace.importer.zip.ZipFileImporterFactory;
+import org.itsallcode.openfasttrace.report.aspec.ASpecReporterFactory;
+import org.itsallcode.openfasttrace.report.html.HtmlReporterFactory;
+import org.itsallcode.openfasttrace.report.plaintext.PlaintextReporterFactory;
 import org.junit.jupiter.api.Test;
 
 /**
- * Test for {@link InitializingServiceLoader}
+ * Test for {@link InitializingServiceLoader} from module {@code core}. This
+ * test must be located in module {@code product} (which includes all plugin
+ * modules) so that it can access all plugin services.
  */
 class TestInitializingServiceLoader
 {
@@ -29,14 +34,14 @@ class TestInitializingServiceLoader
     void testNoServicesRegistered()
     {
         final Object context = new Object();
-        final InitializingServiceLoader<InitializableServiceStub, Object> voidServiceLoader = InitializingServiceLoader
+        final Loader<InitializableServiceStub> voidServiceLoader = InitializingServiceLoader
                 .load(InitializableServiceStub.class, context);
-        final List<InitializableServiceStub> services = StreamSupport
-                .stream(voidServiceLoader.spliterator(), false).collect(toList());
+        final List<InitializableServiceStub> services = voidServiceLoader.load().toList();
         assertThat(services, emptyIterable());
-        assertThat(voidServiceLoader, emptyIterable());
+        assertThat(voidServiceLoader.load().toList(), emptyIterable());
     }
 
+    // [itest->dsn~plugins.loading.plugin-types~1]
     @Test
     void testImporterFactoriesRegistered()
     {
@@ -44,10 +49,11 @@ class TestInitializingServiceLoader
         final List<ImporterFactory> services = getRegisteredServices(ImporterFactory.class,
                 context);
         assertThat(services, hasSize(5));
-        assertThat(services, containsInAnyOrder(instanceOf(MarkdownImporterFactory.class), //
-                instanceOf(RestructuredTextImporterFactory.class), //
-                instanceOf(SpecobjectImporterFactory.class), //
-                instanceOf(TagImporterFactory.class), //
+        assertThat(services, containsInAnyOrder(
+                instanceOf(MarkdownImporterFactory.class),
+                instanceOf(RestructuredTextImporterFactory.class),
+                instanceOf(SpecobjectImporterFactory.class),
+                instanceOf(TagImporterFactory.class),
                 instanceOf(ZipFileImporterFactory.class)));
         for (final ImporterFactory importerFactory : services)
         {
@@ -55,6 +61,7 @@ class TestInitializingServiceLoader
         }
     }
 
+    // [itest->dsn~plugins.loading.plugin-types~1]
     @Test
     void testExporterFactoriesRegistered()
     {
@@ -62,8 +69,25 @@ class TestInitializingServiceLoader
         final List<ExporterFactory> services = getRegisteredServices(ExporterFactory.class,
                 context);
         assertThat(services, hasSize(1));
-        assertThat(services, contains(instanceOf(SpecobjectExporterFactory.class)));
+        assertThat(services, containsInAnyOrder(instanceOf(SpecobjectExporterFactory.class)));
         for (final ExporterFactory factory : services)
+        {
+            assertThat(factory.getContext(), sameInstance(context));
+        }
+    }
+
+    // [itest->dsn~plugins.loading.plugin-types~1]
+    @Test
+    void testReporterFactoriesRegistered()
+    {
+        final ReporterContext context = new ReporterContext(null);
+        final List<ReporterFactory> services = getRegisteredServices(ReporterFactory.class,
+                context);
+        assertThat(services, hasSize(3));
+        assertThat(services, containsInAnyOrder(instanceOf(PlaintextReporterFactory.class),
+                instanceOf(ASpecReporterFactory.class),
+                instanceOf(HtmlReporterFactory.class)));
+        for (final ReporterFactory factory : services)
         {
             assertThat(factory.getContext(), sameInstance(context));
         }
@@ -72,9 +96,8 @@ class TestInitializingServiceLoader
     private <T extends Initializable<C>, C> List<T> getRegisteredServices(final Class<T> type,
             final C context)
     {
-        final InitializingServiceLoader<T, C> serviceLoader = InitializingServiceLoader.load(type,
-                context);
-        return StreamSupport.stream(serviceLoader.spliterator(), false).collect(toList());
+        final Loader<T> serviceLoader = InitializingServiceLoader.load(type, context);
+        return serviceLoader.load().toList();
     }
 
     class InitializableServiceStub implements Initializable<Object>
